--- a/design/sass/pages/style.css
+++ b/design/sass/pages/style.css
@@ -624,6 +624,13 @@ footer .fa-handshake-angle {
   margin-bottom: 20px;
 }
 
+#restaurants .listeRestoContainer .restoCard:hover {
+  -webkit-filter: brightness(1.06);
+          filter: brightness(1.06);
+  -webkit-box-shadow: 5px 8px 5px #a0a0a0;
+          box-shadow: 5px 8px 5px #a0a0a0;
+}
+
 #restaurants .listeRestoContainer .restoCard .imageResto {
   position: relative;
 }
