mise en place des medias quieres

--- a/design/sass/pages/menu.scss
+++ b/design/sass/pages/menu.scss
@@ -63,8 +63,11 @@ header {
 .platWrapper_Dessert {
     @extend %cardPlat;
 }
-
+.bouton{
+    text-align: center;
+}
 button{
+    
     margin: 30px 0 30px 0;
     @extend %boutonColore
 }
