--- a/design/sass/pages/menu.scss
+++ b/design/sass/pages/menu.scss
@@ -28,7 +28,7 @@ header {
         object-fit: cover;
     }
 }
-
+// liste des menus
 #lesMenus {
     border-radius: 35px 35px 0 0;
     margin-top: -30px;
@@ -51,7 +51,7 @@ header {
         }
     }
 }
-
+// menu suivant la denomination
 .platWrapper_Entrée {
     @extend %cardPlat;
 }
@@ -66,17 +66,18 @@ header {
 .bouton{
     text-align: center;
 }
+// bouton commander
 button{
     
     margin: 30px 0 30px 0;
     @extend %boutonColore
 }
-
+// footer
 footer {
     position: relative;
     @extend %footer;
 }
-
+// bouton coeur Anime
 .fa-stack {
    @extend %coeurAnime;
 }
