--- a/design/sass/composants/_composants.scss
+++ b/design/sass/composants/_composants.scss
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 
 // mise en place des differentes variables
-$primaryColor : #9356DC;
+$primaryColor : hsl(267, 66%, 60%);
+$primaryColorbck : hsla(266, 86%, 66%, 0.15);
+$primaryColorbckSdw : hsla(266, 86%, 66%, 0.30);
 $secondaryColor : #FF79DA;
 $thirdColor : #99E2D0;
 $background : #f0f0f0;
