--- a/design/sass/pages/menu.css
+++ b/design/sass/pages/menu.css
@@ -77,8 +77,8 @@ button {
   border-radius: 50px;
   padding: 20px;
   border: none;
-  background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
-  background: linear-gradient(#FF79DA, #9356DC);
+  background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9256dc));
+  background: linear-gradient(#FF79DA, #9256dc);
   color: white;
   font-size: 14px;
   font-weight: 600;
@@ -291,7 +291,7 @@ button:hover {
 .fa-stack:hover .fa-solid {
   width: 100%;
   height: 100%;
-  background: -webkit-linear-gradient(45deg, #FF79DA 40%, #9356DC);
+  background: -webkit-linear-gradient(45deg, #FF79DA 40%, #9256dc);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
