--- a/design/sass/pages/style.scss
+++ b/design/sass/pages/style.scss
@@ -146,8 +146,11 @@ header {
             align-items: center;
             margin-bottom: 20px;
             box-shadow: 5px 5px 10px #d3d3d3;
+            &:hover{
+                background-color: $primaryColorbck;
+                box-shadow: 5px 5px 10px $primaryColorbckSdw;
+            }
         }
-
         h2 {
             font-weight: bolder;
         }
@@ -175,7 +178,13 @@ header {
             width: 62px;
         }
 
-        .fa-store {
+        &:hover .fa-store {
+            color: $primaryColor;
+        }
+        &:hover .fa-list{
+            color: $primaryColor;
+        }
+        &:hover .fa-mobile-screen{
             color: $primaryColor;
         }
     }
